WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140468
[Mac][MSE] Stalled YouTube playback does not allow display to sleep.
https://bugs.webkit.org/show_bug.cgi?id=140468
Summary
[Mac][MSE] Stalled YouTube playback does not allow display to sleep.
Jer Noble
Reported
2015-01-14 14:50:38 PST
[Mac][MSE] Stalled YouTube playback does not allow display to sleep.
Attachments
Patch
(890.86 KB, patch)
2015-01-14 14:55 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(892.12 KB, patch)
2015-01-14 15:22 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2015-01-14 14:55:27 PST
Created
attachment 244643
[details]
Patch
Eric Carlson
Comment 2
2015-01-14 15:03:10 PST
Comment on
attachment 244643
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=244643&action=review
> LayoutTests/media/media-source/media-source-stalled-holds-sleep-assertion.html:12 > + function runTest() {
You know what I think of having the function's opening brace here...
Jer Noble
Comment 3
2015-01-14 15:22:20 PST
Created
attachment 244650
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2015-01-14 22:00:48 PST
Comment on
attachment 244650
[details]
Patch for landing Clearing flags on attachment: 244650 Committed
r178486
: <
http://trac.webkit.org/changeset/178486
>
Csaba Osztrogonác
Comment 5
2015-01-19 04:55:27 PST
(In reply to
comment #4
)
> Comment on
attachment 244650
[details]
> Patch for landing > > Clearing flags on attachment: 244650 > > Committed
r178486
: <
http://trac.webkit.org/changeset/178486
>
It broke the !ENABLE(VIDEO) build, new bug report with the fix:
bug140611
.
Simon Fraser (smfr)
Comment 6
2016-04-30 11:00:08 PDT
This test is timing out everywhere:
https://build.webkit.org/results/Apple%20Yosemite%20Debug%20WK2%20(Tests)/r200289%20(11788)/results.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug